# findflights

./: .gitignore  CLAUDE_CONVO.md  README.md  data_collection.py  lib.py  main.py  pyproject.toml  requirements-ui.txt  server.py
ui/: README.md  package-lock.json  package.json
ui/src/: App.js  api.js  index.css  index.js
ui/src/components/: AdvancedSearch.js  FlightResults.js  GlobalConstraints.js  Header.js  SearchForm.js  Sidebar.js
ui/src/components/edges/: EdgeConfig.js  EdgeLabel.js
ui/src/components/nodes/: AirportNode.js  TourNode.js
ui/src/utils/: graphValidator.js
