[project]
name = "findflights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref>=3.8.1",
    "bs4>=0.0.2",
    "flask>=3.1.0",
    "hypercorn>=0.17.3",
    "playwright>=1.51.0",
    "rich>=13.9.4",
]

[project.scripts]
findflights = "main:main"
